log
Thu 14 Sep 2023 04:58:23 PM UTC: 
 tests:  1|8
total_score: 0/70
754875a
Thu 14 Sep 2023 05:22:23 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:51: error: expected ‘)’ before ‘;’ token
   41 |   TreeMap *map = (TreeMap*) malloc(sizeof(TreeMap);
      |                                   ~               ^
      |                                                   )
treemap.c:48:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   48 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:41:12: error: unused variable ‘map’ [-Werror=unused-variable]
   41 |   TreeMap *map = (TreeMap*) malloc(sizeof(TreeMap);
      |            ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
8256a77
